src/BulletSharpPInvoke/Dynamics/WheelInfo.cs

using SiliconStudio.Core.Mathematics;
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace BulletSharp
{
	public class WheelInfoConstructionInfo
	{
		internal IntPtr _native;

		internal WheelInfoConstructionInfo(IntPtr native)
		{
			_native = native;
		}

		public WheelInfoConstructionInfo()
		{
			_native = btWheelInfoConstructionInfo_new();
		}

		public bool IsFrontWheel
		{
			get { return btWheelInfoConstructionInfo_getBIsFrontWheel(_native); }
			set { btWheelInfoConstructionInfo_setBIsFrontWheel(_native, value); }
		}

		public Vector3 ChassisConnectionCS
		{
            get
			{
				Vector3 value;
				btWheelInfoConstructionInfo_getChassisConnectionCS(_native, out value);
				return value;
			}
			set { btWheelInfoConstructionInfo_setChassisConnectionCS(_native, ref value); }
		}

		public float FrictionSlip
		{
			get { return btWheelInfoConstructionInfo_getFrictionSlip(_native); }
			set { btWheelInfoConstructionInfo_setFrictionSlip(_native, value); }
		}

		public float MaxSuspensionForce
		{
			get { return btWheelInfoConstructionInfo_getMaxSuspensionForce(_native); }
			set { btWheelInfoConstructionInfo_setMaxSuspensionForce(_native, value); }
		}

		public float MaxSuspensionTravelCm
		{
			get { return btWheelInfoConstructionInfo_getMaxSuspensionTravelCm(_native); }
			set { btWheelInfoConstructionInfo_setMaxSuspensionTravelCm(_native, value); }
		}

		public float SuspensionRestLength
		{
			get { return btWheelInfoConstructionInfo_getSuspensionRestLength(_native); }
			set { btWheelInfoConstructionInfo_setSuspensionRestLength(_native, value); }
		}

		public float SuspensionStiffness
		{
			get { return btWheelInfoConstructionInfo_getSuspensionStiffness(_native); }
			set { btWheelInfoConstructionInfo_setSuspensionStiffness(_native, value); }
		}

        public Vector3 WheelAxleCS
		{
            get
			{
				Vector3 value;
				btWheelInfoConstructionInfo_getWheelAxleCS(_native, out value);
				return value;
			}
			set { btWheelInfoConstructionInfo_setWheelAxleCS(_native, ref value); }
		}

        public Vector3 WheelDirectionCS
		{
            get
			{
				Vector3 value;
				btWheelInfoConstructionInfo_getWheelDirectionCS(_native, out value);
				return value;
			}
			set { btWheelInfoConstructionInfo_setWheelDirectionCS(_native, ref value); }
		}

		public float WheelRadius
		{
			get { return btWheelInfoConstructionInfo_getWheelRadius(_native); }
			set { btWheelInfoConstructionInfo_setWheelRadius(_native, value); }
		}

		public float WheelsDampingCompression
		{
			get { return btWheelInfoConstructionInfo_getWheelsDampingCompression(_native); }
			set { btWheelInfoConstructionInfo_setWheelsDampingCompression(_native, value); }
		}

		public float WheelsDampingRelaxation
		{
			get { return btWheelInfoConstructionInfo_getWheelsDampingRelaxation(_native); }
			set { btWheelInfoConstructionInfo_setWheelsDampingRelaxation(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btWheelInfoConstructionInfo_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~WheelInfoConstructionInfo()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btWheelInfoConstructionInfo_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btWheelInfoConstructionInfo_getBIsFrontWheel(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_getChassisConnectionCS(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getFrictionSlip(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getMaxSuspensionForce(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getMaxSuspensionTravelCm(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getSuspensionRestLength(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getSuspensionStiffness(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfoConstructionInfo_getWheelAxleCS(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfoConstructionInfo_getWheelDirectionCS(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getWheelRadius(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getWheelsDampingCompression(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btWheelInfoConstructionInfo_getWheelsDampingRelaxation(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setBIsFrontWheel(IntPtr obj, bool value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setChassisConnectionCS(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setFrictionSlip(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setMaxSuspensionForce(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setMaxSuspensionTravelCm(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setSuspensionRestLength(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setSuspensionStiffness(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfoConstructionInfo_setWheelAxleCS(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btWheelInfoConstructionInfo_setWheelDirectionCS(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setWheelRadius(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setWheelsDampingCompression(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_setWheelsDampingRelaxation(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btWheelInfoConstructionInfo_delete(IntPtr obj);
	}

    public class RaycastInfo
    {
        internal IntPtr _native;

        internal RaycastInfo(IntPtr native)
        {
            _native = native;
        }

        public RaycastInfo()
        {
            _native = btWheelInfo_RaycastInfo_new();
        }

        public Vector3 ContactNormalWS
        {
            get
			{
				Vector3 value;
				btWheelInfo_RaycastInfo_getContactNormalWS(_native, out value);
				return value;
			}
            set { btWheelInfo_RaycastInfo_setContactNormalWS(_native, ref value); }
        }

        public Vector3 ContactPointWS
        {
            get
			{
				Vector3 value;
				btWheelInfo_RaycastInfo_getContactPointWS(_native, out value);
				return value;
			}
            set { btWheelInfo_RaycastInfo_setContactPointWS(_native, ref value); }
        }

        public Object GroundObject
        {
            get { return CollisionObject.GetManaged(btWheelInfo_RaycastInfo_getGroundObject(_native)); }
            set { btWheelInfo_RaycastInfo_setGroundObject(_native, (value as CollisionObject)._native); }
        }

        public Vector3 HardPointWS
        {
            get
			{
				Vector3 value;
				btWheelInfo_RaycastInfo_getHardPointWS(_native, out value);
				return value;
			}
            set { btWheelInfo_RaycastInfo_setHardPointWS(_native, ref value); }
        }

        public bool IsInContact
        {
            get { return btWheelInfo_RaycastInfo_getIsInContact(_native); }
            set { btWheelInfo_RaycastInfo_setIsInContact(_native, value); }
        }

        public float SuspensionLength
        {
            get { return btWheelInfo_RaycastInfo_getSuspensionLength(_native); }
            set { btWheelInfo_RaycastInfo_setSuspensionLength(_native, value); }
        }

        public Vector3 WheelAxleWS
        {
            get
			{
				Vector3 value;
				btWheelInfo_RaycastInfo_getWheelAxleWS(_native, out value);
				return value;
			}
            set { btWheelInfo_RaycastInfo_setWheelAxleWS(_native, ref value); }
        }

        public Vector3 WheelDirectionWS
        {
            get
			{
				Vector3 value;
				btWheelInfo_RaycastInfo_getWheelDirectionWS(_native, out value);
				return value;
			}
            set { btWheelInfo_RaycastInfo_setWheelDirectionWS(_native, ref value); }
        }

        public void Dispose()
        {
            Dispose(true);
            GC.SuppressFinalize(this);
        }

        protected virtual void Dispose(bool disposing)
        {
            if (_native != IntPtr.Zero)
            {
                btWheelInfo_RaycastInfo_delete(_native);
                _native = IntPtr.Zero;
            }
        }

        ~RaycastInfo()
        {
            Dispose(false);
        }
